# NeuralNet

./: CMakeLists.txt
include/core/: activation_func.hpp  layer.hpp  neuron.hpp  tensor.hpp
include/core/layers/: AddLayer.hpp  FullyConnected.hpp
src/: main.cpp
src/core/: activation_func.cpp  layer.cpp  neuron.cpp  tensor.cpp
src/core/layers/: AddLayer.cpp  FullyConnected.cpp
tests/: CMakeLists.txt
tests/layerTests/: AddLayerTests.cpp  CMakeLists.txt  FullyConnectedTests.cpp
